--- a/angular-projects/issue-tracker/package.json
+++ b/angular-projects/issue-tracker/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@cds/core": "^5.6.4",
     "@clr/angular": "^13.0.3",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.0.3",
+    "@webcomponents/webcomponentsjs": "^2.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
